force-app/main/default/objects/ANZ_Contact__c/ANZ_Contact__c.object-meta.xml
<CustomObject>
    <label>ANZ_Contact_Manual</label>
    <nameField>
        <label>ANZ_Contact_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ANZ_Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>