force-app/main/default/objects/ANZ_Contact__c/fields/addr_streetline1__c.field-meta.xml
<CustomField>
    <fullName>addr_streetline1__c</fullName>
    <label>Addr_StreetLine1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>