force-app/main/default/objects/ANZ_Contact__c/fields/addr_Suburb_Town__c.field-meta.xml
<CustomField>
    <fullName>addr_Suburb_Town__c</fullName>
    <label>Addr_Suburb/Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>