force-app/main/default/objects/ANZ_Contact__c/fields/child_nationalid__c.field-meta.xml
<CustomField>
    <fullName>child_nationalid__c</fullName>
    <label>Child_NationalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>