force-app/main/default/objects/ANZ_Contact__c/fields/contact_edd__c.field-meta.xml
<CustomField>
    <fullName>contact_edd__c</fullName>
    <label>Contact_EDD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>