force-app/main/default/objects/ANZ_Contact__c/fields/contact_lastname__c.field-meta.xml
<CustomField>
    <fullName>contact_lastname__c</fullName>
    <label>Contact_LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>