force-app/main/default/objects/ANZ_Contact__c/fields/contact_weight__c.field-meta.xml
<CustomField>
    <fullName>contact_weight__c</fullName>
    <label>Contact_Weight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>