force-app/main/default/objects/ANZ_Contact__c/fields/cr_channelid__c.field-meta.xml
<CustomField>
    <fullName>cr_channelid__c</fullName>
    <label>CR_ChannelID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>