force-app/main/default/objects/ANZ_Contact__c/fields/cr_registrationdate__c.field-meta.xml
<CustomField>
    <fullName>cr_registrationdate__c</fullName>
    <label>CR_RegistrationDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>