force-app/main/default/objects/ANZ_Contact__c/fields/cr_UTMCampaign__c.field-meta.xml
<CustomField>
    <fullName>cr_UTMCampaign__c</fullName>
    <label>CR_UTMCampaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>