force-app/main/default/objects/ANZ_Contact__c/fields/cr_UTMContent__c.field-meta.xml
<CustomField>
    <fullName>cr_UTMContent__c</fullName>
    <label>CR_UTMContent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>