force-app/main/default/objects/ANZ_Contact__c/fields/cr_UTMMedium__c.field-meta.xml
<CustomField>
    <fullName>cr_UTMMedium__c</fullName>
    <label>CR_UTMMedium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>