force-app/main/default/objects/ANZ_Contact__c/fields/cr_UTMSource__c.field-meta.xml
<CustomField>
    <fullName>cr_UTMSource__c</fullName>
    <label>CR_UTMSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>