force-app/main/default/objects/ANZ_Contact__c/fields/cr_UTMString__c.field-meta.xml
<CustomField>
    <fullName>cr_UTMString__c</fullName>
    <label>CR_UTMString</label>
    <length>255</length>
    <type>Text</type>
</CustomField>