force-app/main/default/objects/ANZ_Contact__c/fields/Object_Extraction_Status__c.field-meta.xml
<CustomField>
    <fullName>Object_Extraction_Status__c</fullName>
    <label>Object_Extraction_Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>